7088020: SEGV in JNIHandleBlock::release_block

Reviewed-by: kvn, twisti